# ImgPopper

./: .gitignore  CMakeLists.txt  README.md
include/: PdfScanner.hpp  Util.hpp  ZipScanner.hpp
src/: Main.cpp  PdfScanner.cpp  Util.cpp  ZipScanner.cpp
